SERVER-71410 Fix SeveritySuppressor so that quiet/normal log intervals are correct