src/mongo/logv2/log_severity_suppressor.h
@@ -40,6 +40,7 @@
 #include "mongo/logv2/log_severity.h"
 #include "mongo/platform/mutex.h"
 #include "mongo/stdx/unordered_map.h"
+#include "mongo/util/clock_source.h"
 #include "mongo/util/time_support.h"
 
 namespace mongo::logv2 {
@@ -115,20 +116,31 @@ private:
 
 class SeveritySuppressor {
 public:
+    SeveritySuppressor(ClockSource* cs, Milliseconds period, LogSeverity normal, LogSeverity quiet)
+        : _clock(cs), _period{period}, _normal{normal}, _quiet{quiet} {}
+
     SeveritySuppressor(Milliseconds period, LogSeverity normal, LogSeverity quiet)
-        : _period{period}, _normal{normal}, _quiet{quiet} {}
+        : SeveritySuppressor(nullptr, period, normal, quiet) {}
 
     LogSeverity operator()() {
-        auto now = Date_t::now();
+        auto now = _now();
         auto lg = stdx::lock_guard(_mutex);
         if (_expire <= now) {
-            _expire = now + Seconds{1};
-            return _quiet;
+            _expire = now + _period;
+            return _normal;
         }
-        return _normal;
+        return _quiet;
     }
 
 private:
+    Date_t _now() {
+        if (_clock) {
+            return _clock->now();
+        }
+        return Date_t::now();
+    }
+
+    ClockSource* _clock;
     Milliseconds _period;
     LogSeverity _normal;
     LogSeverity _quiet;
